# trusted-seed-generator

./: .gitignore  Makefile  Readme.md
app/: Cargo.toml
app/src/: cli.rs  main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/src/: lib.rs
