[package]
name = "PandasSeedApp"
version = "1.0.0"
authors = ["SpacePandas Developers"]
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
structopt = "0.3"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
